adding mudblazor in search component / adding cards result / a demo of mudblazor login page

--- a/activities/App.razor
+++ b/activities/App.razor
@@ -1,4 +1,7 @@
-﻿<CascadingAuthenticationState>
+﻿@using activities.Models;
+@inject TokenProvider tokenProvider
+
+<CascadingAuthenticationState>
     <Router AppAssembly="@typeof(App).Assembly">
         <Found Context="routeData">
             <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
@@ -12,3 +15,14 @@
         </NotFound>
     </Router>
 </CascadingAuthenticationState>
+
+@code {
+    [Parameter]
+    public string AntiforgeryToken { get; set; }
+
+    protected override Task OnInitializedAsync()
+    {
+        tokenProvider.AntiforgeryToken = AntiforgeryToken;
+        return base.OnInitializedAsync();
+    }
+}
