--- a/activities/Shared/MainLayout.razor
+++ b/activities/Shared/MainLayout.razor
@@ -1,19 +1,123 @@
 ﻿@inherits LayoutComponentBase
 
-<PageTitle>activities</PageTitle>
+<style>
+    .TopBar .mud-expand-panel, .muudstrap-navbar-expand {
+        color: white;
+        background-color: blueviolet;
+    }
+    
+    .ButtomBar .mud-expand-panel, .muudstrap-navbar-expand {
+        color: var(--mud-palette-appbar-text);
+        background-color: var(--mud-palette-appbar-background);
+    }
 
-<div class="page">
-    <div class="sidebar">
+    .muudstrap-navbar .mud-button {
+        text-transform: none;
+    }
+
+    .muudstrap-navbar .mud-expand-panel-header {
+        padding: 0px;
+        width: 100%;
+        height: 100%;
+        flex: none;
+    }
+</style>
+<MudThemeProvider Theme="MuudstrapTheme" />
+<MudAppBar Color="Color.Primary" Fixed="false">
+    <MudText Typo="Typo.h5" Class="ml-2 mr-4 p-2">ZEN22 APP</MudText>
+    <MudSpacer />
+    <LoginDisplay />
+
+</MudAppBar>
+
+<NavMenu />
+
+
+<MudMainContent Class="p-0 m-0">
+    @Body
+</MudMainContent>
+@code {
+    MudTheme MuudstrapTheme = new MudTheme()
+        {
+
+            Palette = new PaletteLight()
+            {
+                AppbarBackground = "#ffffff",
+                AppbarText = "#181819",
+                Background = "#f5f5f5"
+            },
+            Typography = new Typography()
+            {
+                H6 = new H6()
+                {
+                    FontSize = "1.25rem",
+                    FontWeight = 400,
+                    LineHeight = 1.7,
+                    LetterSpacing = "normal"
+                },
+                Button = new Button()
+                {
+                    FontSize = "1rem",
+                    FontWeight = 400,
+                    LineHeight = 1.5,
+                    LetterSpacing = "normal"
+                }
+            }
+        };
+}
+
+@*
+<MudThemeProvider Theme="MyCustomTheme" />
+<MudDialogProvider />
+<MudSnackbarProvider />
+<MudLayout>
+    <MudAppBar Elevation="1">
+        <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" />
+        <MudText Typo="Typo.h5" Class="ml-3">DbProfiscal Admin</MudText>
+        <MudSpacer />
+        <LoginDisplay />
+        <MudIconButton Icon="@Icons.Material.Filled.MoreVert" Color="Color.Inherit" Edge="Edge.End" />
+    </MudAppBar>
+    <MudDrawer @bind-Open="_drawerOpen" Width="300px" Variant="@DrawerVariant.Responsive" OpenMiniOnHover="true" ClipMode="DrawerClipMode.Always" Elevation="2">
         <NavMenu />
-    </div>
-
-    <main>
-        <div class="top-row px-4 auth">
-            <LoginDisplay />
-        </div>
-
-        <article class="content px-4">
+    </MudDrawer>
+    <MudMainContent Class="pt-16 px-16">
+        <MudContainer Class="mt-6" MaxWidth="MaxWidth.ExtraLarge">
             @Body
-        </article>
-    </main>
-</div>
+        </MudContainer>
+    </MudMainContent>
+</MudLayout>
+@code {
+
+    MudTheme MyCustomTheme = new MudTheme()
+    {
+        Palette = new Palette()
+        {
+            Primary = Colors.Blue.Default,
+            Secondary = Colors.Green.Accent4,
+            AppbarBackground = Colors.BlueGrey.Lighten2,
+            DrawerBackground = Colors.Indigo.Lighten5,
+            Background = Colors.Grey.Lighten5,
+
+        },
+
+        PaletteDark = new Palette()
+        {
+            Primary = Colors.Blue.Lighten1
+        },
+
+        LayoutProperties = new LayoutProperties()
+        {
+            DrawerWidthLeft = "260px",
+            DrawerWidthRight = "300px"
+        }
+    };
+
+    bool _drawerOpen = true;
+
+    void DrawerToggle()
+    {
+        _drawerOpen = !_drawerOpen;
+    }
+}
+*@
