--- a/activities/Shared/NavMenu.razor
+++ b/activities/Shared/NavMenu.razor
@@ -1,43 +1,37 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="">activities</a>
-        <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-    </div>
-</div>
-
-<div class="@NavMenuCssClass nav-scrollable" @onclick="ToggleNavMenu">
-    <nav class="flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="search">
-                <span class="oi oi-person" aria-hidden="true"></span> Search
-            </NavLink>
-        </div>
-
+﻿<MudAppBar Fixed="false" Elevation="0" DisableGutters="true" Class="ButtomBar muudstrap-navbar">
+    <div class=" ml-6 d-none d-md-flex align-center px-6">
+        <MudButton Color="Color.Inherit" Link="/">Home</MudButton>
+        <MudButton Color="Color.Inherit" Link="/Search">Search</MudButton>
         <AuthorizeView Roles="Admin">
-            <div class="nav-item px-3">
-                <NavLink class="nav-link" href="users">
-                    <span class="oi oi-cog" aria-hidden="true"></span> Manage Users
-                </NavLink>
-            </div>
+            <MudButton Color="Color.Inherit" Link="/users">Manage Users</MudButton>
         </AuthorizeView>
-
-    </nav>
-</div>
-
-@code {
-    private bool collapseNavMenu = true;
-
-    private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
-
-    private void ToggleNavMenu()
-    {
-        collapseNavMenu = !collapseNavMenu;
-    }
-}
+    </div>
+    <div class="d-flex d-md-none relative mud-width-full mud-height-full">
+        <MudExpansionPanels Square="true" Elevation="0" Class="absolute mud-width-full mud-height-full" Style="top:0px;left:0; background-color:Inherit;">
+            <MudExpansionPanel HideIcon="true" Class="mud-width-full mud-height-full">
+                <TitleContent>
+                    <div class="d-flex justify-space-between mud-width-full align-center px-6">
+                        <div class="d-flex align-center">
+                            <MudPaper Height="36px" Width="36px" Elevation="25" Class="pa-1 rounded-lg d-flex justify-center align-center mud-theme-primary">
+                                <MudText Typo="Typo.h6">M</MudText>
+                            </MudPaper>
+                            <MudText Typo="Typo.h6" Class="ml-4 mr-12 pt-1 pb-2">Muudstrap</MudText>
+                        </div>
+                        <MudIcon Icon="@Icons.Material.Filled.Menu" />
+                    </div>
+                </TitleContent>
+                <ChildContent>
+                    <div class="py-6 mx-n6 muudstrap-navbar-expand">
+                        <MudNavMenu>
+                            <MudNavLink Href="/">Home</MudNavLink>
+                            <MudNavLink Href="/Search">Search</MudNavLink>
+                            <AuthorizeView Roles="Admin">
+                                <MudNavLink Href="/users">Manage Users</MudNavLink>
+                            </AuthorizeView>                 
+                        </MudNavMenu>
+                    </div>
+                </ChildContent>
+            </MudExpansionPanel>
+        </MudExpansionPanels>
+    </div>
+</MudAppBar>
