--- a/activities/Pages/Profile.razor
+++ b/activities/Pages/Profile.razor
@@ -103,6 +103,9 @@
                                                 <div class="form-group">
                                                     <InputCheckbox @bind-Value="SearchedProfile.Available"></InputCheckbox> Available
                                                 </div>
+                                                <div class="form-group">
+                                                    <InputCheckbox @bind-Value="SearchedProfile.Test"></InputCheckbox> Test User
+                                                </div>
                                             </div>
 
                                             <ul class="list-group list-group-flush">
