--- a/activities/Shared/MainLayout.razor
+++ b/activities/Shared/MainLayout.razor
@@ -23,16 +23,7 @@
     }
 </style>
 <MudThemeProvider Theme="MuudstrapTheme" />
-<MudAppBar Color="Color.Primary" Fixed="false">
-    <MudText Typo="Typo.h5" Class="ml-2 mr-4 p-2">ZEN22 APP</MudText>
-    <MudSpacer />
-    <LoginDisplay />
-
-</MudAppBar>
-
-<NavMenu />
-
-
+<TopNav />
 <MudMainContent Class="p-0 m-0">
     @Body
 </MudMainContent>
