--- a/activities/Pages/Search.razor
+++ b/activities/Pages/Search.razor
@@ -245,7 +245,8 @@
             PageSize = 10,
             Approval = -1,// set this to 1 and it will display only approved users ( -1 : all users)
             Member = -1,
-            Available = -1
+            Available = -1,
+            testUser =-1// from search users page, param will be igonored
         };
 
     private Country SelectedCountry;
